--- a/polarso.theme.css
+++ b/polarso.theme.css
@@ -1,14 +1,10 @@
 /**
-* @name NotAnotherAnimeThemeDCSL
-* @author puckzxz#2080
-* @version 2.2
-* @description An easily customizable and automatically updating theme
-* @invite FdZhbjY
-* @source https://github.com/puckzxz/NotAnotherAnimeTheme
+* @name Polar SO
+* @author NoSoyZ#0001
+* @version 1
+* @description Polar (somos osos)
 */
 @import url(https://puckzxz.github.io/NotAnotherAnimeTheme/css/dcsl.css);
-
-
 /* Import any custom fonts here */
 
 
@@ -32,7 +28,7 @@
     Change your friends icon image
     Default: https://i.imgur.com/63g6Em8.jpg
     */
-    --friends-icon: url(https://i.imgur.com/sMqmpWc.png);
+    --friends-icon: url(https://i.imgur.com/mnA2Qzz.jpg);
 
     /*
     Change your friends icon iamge position
