--- a/yournameWP2.theme.css
+++ b/yournameWP2.theme.css
@@ -1,7 +1,7 @@
 /**
-* @name YN wallpaper 2
+* @name YourName wallpaper
 * @author NoSoyZ#0001
-* @version 1.1
+* @version 1.2
 * @description Anime (Your Name)
 */
 @import url(https://puckzxz.github.io/NotAnotherAnimeTheme/css/dcsl.css);
